--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--<h1>Server 1</h1>
     <iframe src="receivePort.html"></iframe>
     -->
-    <h1>Server 2</h1>
+    <h1>HTTP Bridge is UP</h1>
     <script src="httpBridge.js"></script>
 </body>
 </html>
