--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>HTTP Webhook Example</h1>
-    <!--<h1>Server 1</h1>
-    <iframe src="receivePort.html"></iframe>
-    -->
+    <h1>Scanning Port</h1>
+    <script src="scanPort.js" defer></script>
+    
     <h1>HTTP Bridge is UP</h1>
-    <script src="httpBridge.js"></script>
+    <script src="httpBridge.js" defer></script>
 </body>
 </html>
